# Emmanuel_Jr_robot

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/costmap_queue/include/costmap_queue/: costmap_queue.hpp  limited_costmap_queue.hpp  map_based_queue.hpp
install/costmap_queue/share/costmap_queue/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/drive_base_msgs/share/drive_base_msgs/: local_setup.sh  package.sh
install/dwb_core/include/dwb_core/: dwb_local_planner.hpp  exceptions.hpp  illegal_trajectory_tracker.hpp  publisher.hpp  trajectory_critic.hpp  trajectory_generator.hpp  trajectory_utils.hpp
install/dwb_core/share/dwb_core/: local_planner_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dwb_critics/include/dwb_critics/: alignment_util.hpp  base_obstacle.hpp  goal_align.hpp  goal_dist.hpp  line_iterator.hpp  map_grid.hpp  obstacle_footprint.hpp  oscillation.hpp  (+5 more)
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.1.1
log/: latest_build
src/emmanuel/: package.xml  setup.cfg  setup.py
src/emmanuel/emmanuel/: camera.py  imu.py  motor.py  motors.py  rplidar.py  server_listener.py  servo_motor.py  speaker.py
src/emmanuel/launch/: bringup_slam.py
src/emmanuelJr/: package.xml  setup.cfg  setup.py
src/emmanuel_jr/: package.xml  setup.cfg  setup.py
src/linorobot2/linorobot2_bringup/: package.xml
src/testing/: .infrared_sensor.py.swp  infrared_sensor.py
(+1411 files in other folders)
