<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>emmanuel_jr</name>
    <version>0.0.1</version>
    <description>Package for controlling a navigation robot (Emmanuel Jr) across NHL Stenden University of Applied
        Sciences in Emmen, The Netherlands.
    </description>
    <maintainer email="deepgeniools@gmail.com">Geniools</maintainer>
    <license>Apache License 2.0</license>

    <depend>rclpy</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
